<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
<!--        android:title="QEMU"-->
<!--        app:icon="@drawable/ic_qemu">-->

<!--        <ListPreference-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:defaultValue="X86_64"-->
<!--            android:entries="@array/vmArchLabels"-->
<!--            android:entryValues="@array/vmArchValues"-->
<!--            android:key="vmArch"-->
<!--            android:title="@string/vm_arch"-->
<!--            app:icon="@drawable/ic_arch"-->
<!--            app:useSimpleSummaryProvider="true" />-->

        <SwitchPreferenceCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:key="customMemory"
            android:title="@string/custom_memory"
            app:icon="@drawable/round_build_24" />
        <EditTextPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="512"
            android:inputType="number"
            android:key="memory"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/memory_capacity_mb"
            app:useSimpleSummaryProvider="true"
            app:icon="@drawable/round_memory_24" />
        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="None"
            android:entries="@array/soundCardLabels"
            android:entryValues="@array/soundCardValues"
            android:key="soundCard"
            android:title="@string/sound_card"
            app:isPreferenceVisible="false"
            app:icon="@drawable/round_volume_up_24"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue=""
            android:entries="@array/iftypeLabels"
            android:entryValues="@array/iftypeValues"
            android:title="@string/hard_drive_interface"
            android:key="ifType"
            app:useSimpleSummaryProvider="true"
            app:icon="@drawable/round_dns_24" />
        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:key="boot"
            android:title="@string/boot_from"
            android:entries="@array/bootLabels"
            android:entryValues="@array/bootValues"
            android:defaultValue="c"
            app:icon="@drawable/ic_b"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:title="@string/shared_folder"
            android:key="sharedFolder"
            android:summary="/Documents/VectrasVM/SharedFolder/"
            app:icon="@drawable/round_folder_24" />
        <EditTextPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue=""
            android:inputType="text"
            android:key="customParams"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/custom_params"
            app:useSimpleSummaryProvider="true"
            app:icon="@drawable/round_terminal_24" />
        <SwitchPreferenceCompat
            android:id="@+id/autocreatedisk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:key="autoCreateDisk"
            android:summary="@string/with_size_is_128GB"
            android:title="@string/auto_create_new_hard_drive_when_creating_new_vm"
            app:icon="@drawable/round_add_24" />
        <SwitchPreferenceCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="true"
            android:key="useDefaultBios"
            android:title="@string/use_default_bios_uefi"
            app:icon="@drawable/hard_disk_24px" />
        <SwitchPreferenceCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:key="useUEFI"
            android:title="@string/use_uefi_for_x64_only"
            app:icon="@drawable/hard_disk_24px" />
        <SwitchPreferenceCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="true"
            android:key="useMemoryOvercommit"
            android:title="@string/use_memory_overcommit"
            app:icon="@drawable/memory_alt_24px" />
        <SwitchPreferenceCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="true"
            android:key="useLocalTime"
            android:title="@string/use_local_time"
            app:icon="@drawable/schedule_24px" />
    </PreferenceCategory>
    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/threedfx"
        app:icon="@drawable/round_settings_24">

        <SwitchPreferenceCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:key="enable3dfx"
            android:title="@string/enable_3dfx"
            android:summary="@string/enable_3dfx_note"
            app:icon="@drawable/round_settings_24" />

        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="3dfx-wrappers-3.5.0.iso"
            android:entries="@array/threedfxWrapperLabels"
            android:entryValues="@array/threedfxWrapperValues"
            android:key="threedfxWrapperVersion"
            android:title="@string/threedfx_wrapper_version"
            app:icon="@drawable/round_info_24"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/rafaelia_runtime"
        app:icon="@drawable/round_terminal_24">

        <SwitchPreferenceCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:key="rafaeliaEnabled"
            android:title="@string/rafaelia_enable"
            app:icon="@drawable/round_settings_24" />

        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="0"
            android:entries="@array/rafaeliaModeLabels"
            android:entryValues="@array/rafaeliaModeValues"
            android:key="rafaeliaMode"
            android:title="@string/rafaelia_mode"
            app:icon="@drawable/round_info_24" />

        <EditTextPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="10"
            android:inputType="number"
            android:key="rafaeliaTickMs"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/rafaelia_tick_ms"
            app:useSimpleSummaryProvider="true"
            app:icon="@drawable/round_update_24" />

        <SwitchPreferenceCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:key="rafaeliaDebug"
            android:title="@string/rafaelia_debug"
            app:icon="@drawable/outline_bug_report_24" />

        <EditTextPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="30"
            android:inputType="number"
            android:key="rafaeliaBenchDurationSec"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/rafaelia_bench_duration"
            app:useSimpleSummaryProvider="true"
            app:icon="@drawable/round_update_24" />

        <SwitchPreferenceCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="true"
            android:key="rafaeliaLogCapture"
            android:title="@string/rafaelia_log_capture"
            app:icon="@drawable/round_terminal_24" />

        <SwitchPreferenceCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:key="rafaeliaBitStack"
            android:title="@string/rafaelia_bitstack"
            app:icon="@drawable/round_storage_24" />
    </PreferenceCategory>
    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/rafaelia_autotune"
        app:icon="@drawable/round_settings_24">

        <SwitchPreferenceCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="true"
            android:key="rafaeliaAutotuneEnabled"
            android:title="@string/rafaelia_autotune_enabled"
            android:summary="@string/rafaelia_autotune_enabled_desc"
            app:icon="@drawable/round_settings_24" />

        <EditTextPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="2048"
            android:inputType="number"
            android:key="rafaeliaTcgTbSize"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/rafaelia_tcg_tb_size"
            android:summary="@string/rafaelia_tcg_tb_size_desc"
            app:useSimpleSummaryProvider="true"
            app:icon="@drawable/round_memory_24" />

        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="standard"
            android:entries="@array/rafaeliaBenchProfileLabels"
            android:entryValues="@array/rafaeliaBenchProfileValues"
            android:key="rafaeliaBenchProfile"
            android:title="@string/rafaelia_bench_profile"
            android:summary="@string/rafaelia_bench_profile_desc"
            app:icon="@drawable/round_settings_24"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="2"
            android:inputType="number"
            android:key="rafaeliaBenchStrideBytes"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/rafaelia_bench_stride"
            android:summary="@string/rafaelia_bench_stride_desc"
            app:useSimpleSummaryProvider="true"
            app:icon="@drawable/round_dns_24" />

        <EditTextPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="4"
            android:inputType="number"
            android:key="rafaeliaBenchMatrixN"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/rafaelia_bench_matrix"
            android:summary="@string/rafaelia_bench_matrix_desc"
            app:useSimpleSummaryProvider="true"
            app:icon="@drawable/grid_view_24px" />
    </PreferenceCategory>
    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/ui_environment"
        app:isPreferenceVisible="true"
        app:iconSpaceReserved="false">

        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="X11"
            android:entries="@array/vmUiLabels"
            android:entryValues="@array/vmUiValues"
            android:key="vmUi"
            android:title="UI"
            app:isPreferenceVisible="true"
            app:useSimpleSummaryProvider="true"
            app:icon="@drawable/computer"/>

        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="800x600"
            android:entries="@array/displayResolution"
            android:entryValues="@array/displayResolution"
            android:key="RESOLUTION"
            android:title="@string/x11_resolution"
            app:isPreferenceVisible="false"
            app:useSimpleSummaryProvider="true"
            app:icon="@drawable/round_aspect_ratio_24"/>

    </PreferenceCategory>
</PreferenceScreen>
